
install( FILES kmines_classic.svgz kmines_oxygen.svgz kmines_green.svgz graveyard-mayhem.svgz kmines_clean_blue.svg kmines_clean_blue_dark.svg clean_blue.desktop clean_blue_dark.desktop default.desktop classic.desktop graveyard-mayhem.desktop green.desktop classic_preview.png green.png default_preview.png graveyard-mayhem-preview.png clean_blue_preview.png clean_blue_dark_preview.png DESTINATION  ${KDE_INSTALL_DATADIR}/kmines/themes )

